✨ Enhanced design with modern styling and animations - Added premium typography with Playfair Display and Inter fonts - Implemented modern CSS custom properties and variables - Enhanced hero section with gradient backgrounds and animations - Improved product cards with hover effects and shadows - Added professional button styles with ripple effects - Enhanced navigation with smooth scroll and hide/show functionality - Implemented scroll-to-top button with smooth animations - Added fade-in animations for all sections - Enhanced form styling with modern inputs and focus states - Improved footer with gradient backgrounds and better typography - Added parallax effects and performance optimizations - Implemented accessibility improvements with keyboard navigation - Added loading states and enhanced user experience features

--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
+    <section class="hero" data-parallax="0.3">
+        <div class="hero-content fade-in">
             <h2>Discover Timeless Elegance</h2>
-            <p>Exquisite jewelry crafted with precision and passion</p>
-            <a href="pages/products.html" class="cta-btn">Shop Now</a>
+            <p>Exquisite jewelry crafted with precision and passion for those who appreciate the finest things in life</p>
+            <a href="pages/products.html" class="cta-btn">
+                <span>Explore Collection</span>
+                <i class="fas fa-arrow-right"></i>
+            </a>
         </div>
-        <div class="hero-image">
+        <div class="hero-image fade-in">
             <!-- Placeholder for hero image -->
             <div class="image-placeholder">
                 <i class="fas fa-gem"></i>
-                <p>Hero Image Placeholder</p>
+                <p>Luxury Jewelry Collection</p>
             </div>
         </div>
     </section>
